Finished Comaprion table and modify the click to expand in animals column of herdlist to use comboBox. by 6th/07/2024